--- a/app/index.html
+++ b/app/index.html
@@ -359,9 +359,9 @@
             </div>
         </section>
         <section id = "reviews" class = "wrap">
-            <button class = "prev" type = "button"></button>
+            <button id = "prev" type = "button"></button>
             <div class = "slider_full_size">
-                <div class = "slider_set slider_active">
+                <div class = "slider_set">
                     <div class = "up alex_opinion">
                         <p class = "opinion">
                             Сonsectetuer adipiscing  elit. Aenean commodo ligula eget dolor. Aenean massa.
@@ -430,7 +430,7 @@
                         </div>
                     </div>
                 </div>
-                <div class = "slider_set slider_not_active">
+                <div class = "slider_set">
                     <div class = "up alex_opinion">
                         <p class = "opinion">
                             Сonsectetuer adipiscing  elit. Aenean commodo ligula eget dolor. Aenean massa.
@@ -502,7 +502,7 @@
             </div>
             <div class="slider_mobile">
                 <!-- <div class="slider_one"> -->
-                    <div class = "alex_opinion active">
+                    <div class = "alex_opinion slider_mobile_item">
                         <div class = "opinion_author">
                             <h4>
                                 Alex, 35
@@ -516,7 +516,7 @@
                         </p>
                         <a href="@" class = "opinion_href">ooo</a>
                     </div>
-                    <div class = "denis_opinion">
+                    <div class = "denis_opinion slider_mobile_item">
                         <div class = "opinion_author">
                             <h4>
                                 Denis, 28
@@ -530,7 +530,7 @@
                         </p>
                         <a href="#" class = "opinion_href">ooo</a>
                     </div>
-                    <div class = "anna_opinion">
+                    <div class = "anna_opinion slider_mobile_item">
                         <div class = "opinion_author">
                             <h4>
                                 Anna, 23
@@ -539,12 +539,12 @@
                                 art director
                             </p>
                         </div>                        
-                        <p class = "opinion">
+                        <p class = "opinion ">
                             Aenean massa. Cum sociis  natoque penatibus et  magnis dis parturien montes, nascetur.
                         </p>
                         <a href="#" class = "opinion_href">ooo</a>  
                     </div> 
-                    <div class = "jane_opinion">
+                    <div class = "jane_opinion slider_mobile_item">
                             <div class = "opinion_author">
                                 <h4>
                                     Jane, 27
@@ -560,7 +560,7 @@
                     </div>
                 <!-- </div> -->
             </div>
-            <button class = "next" type = "button"></button>
+            <button id = "next" type = "button"></button>
         </section>
         <section id = "details" class = "wrap">
             <div class = "frame">
@@ -781,5 +781,6 @@
             </div>  
         </div>      
     </footer>
+    <script type="text/javascript" src="js/slider.js"></script>
 </body>
 </html>
